--- a/src/Component/Search/search.css
+++ b/src/Component/Search/search.css
@@ -17,10 +17,51 @@
 }
 .tabContent{
     background-color: #152044 !important;
+    margin-bottom: 100px;
 }
 
 .iconDiv{
     left: 28px;
     position: absolute;
     top: 5px;    
+}
+
+.MuiInputBase-input{
+    background: white !important;
+    border-radius: 6px !important;
+    padding: 11px !important;
+}
+
+.economy_content{
+    position: relative;
+}
+.searchIcon{
+    position: absolute;
+    max-width: 30px;
+    max-height: 30px;
+}
+.searchIcon img{
+    max-width: 100%;
+    max-height: 100%;
+}
+.economy select{
+    background: #152044 !important;
+    color: white !important;
+}
+.economy select>option{
+    background: #152044 !important;
+    color: white !important;
+}
+.searchIcon{
+    position: absolute;
+    max-width: 40px;
+    right: 100px;
+    top: 50%;
+    max-height: 40px;
+}
+.searchIcon img{
+    border-radius: 200px;
+}
+.MuiBox-root-10 {
+    padding-bottom: 0 !important;
 }
