--- a/src/Component/Plan/responsive.css
+++ b/src/Component/Plan/responsive.css
@@ -1,4 +1,18 @@
+@media only screen and (max-width: 999px) {
+
+
+    .barlinContent{
+        padding: 35px 30px;
+    }
+    .number{
+        margin-left: 20px;
+    }
+    
+}
 @media only screen and (max-width: 768px) {
+    .barlin {
+        height: 200px;
+    }
     .planleftContent {
         padding: 37px 60px;
     }
@@ -13,7 +27,7 @@
     }
     /* barlin */
     .barlinContent{
-        padding:22px;
+        padding:16px  30px
     } 
     .barlinContent h3{
         font-size: 25px;
@@ -32,7 +46,9 @@
         padding: 3px 15px;
     }
 }
-@media only screen and (max-width: 425px) {
+
+
+@media only screen and (max-width: 510px) {
     .planleftContent {
         padding: 42px 30px;
     }
@@ -57,6 +73,14 @@
         margin-left: 5px;
     }
 }
+
+@media only screen and (max-width: 375px) {
+    .barlinContent {
+        padding: 19px 12px;
+    }
+}
+
+
 
 @media only screen and (max-width: 320px) {
     .planleftContent {
